--- a/sass/custom.sass
+++ b/sass/custom.sass
@@ -7,7 +7,7 @@ $beige-lighter: #EFF0EB;
 $turquoise: hsl(171, 100%, 41%);
 
 // Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
+//$family-sans-serif: "Nunito", sans-serif;
 $grey-dark: $brown;
 $grey-light: $beige-light;
 $primary: $turquoise;
@@ -27,3 +27,5 @@ $fullhd-enabled: false;
 @import "../node_modules/bulma/sass/layout/hero.sass";
 @import "../node_modules/bulma/sass/layout/section.sass";
 @import "~bulma/css/bulma.css";
+@import '../node_modules/bulma-list/sass/bulma-list.sass';
+@import '../node_modules/bulma-timeline/src/sass/index.sass';
